--- a/templates/base.html
+++ b/templates/base.html
@@ -165,6 +165,9 @@
                     },
                     cartproducts: state => {
                         return state.cart.cart;
+                    },
+                    incart: (state) => (key) => {
+                        console.log("pass")
                     }
                 },
                 actions: {
