--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -223,5 +223,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.5/js/swiper.min.js" integrity="sha512-VHsNaV1C4XbgKSc2O0rZDmkUOhMKPg/rIi8abX9qTaVDzVJnrDGHFnLnCnuPmZ3cNi1nQJm+fzJtBbZU9yRCww==" crossorigin="anonymous"></script>
 {% endif %}
 <script src="{% static 'js/vue-awesome-swiper.js' %}"></script>
-<script src="{% static 'js/index.js' %}"></script>
+<script src="{% static 'js/index.js' %}" type="text/javascript"></script>
 {% endblock javascript %}
